--- a/oefenhuiswerk hfst18/css/style.css
+++ b/oefenhuiswerk hfst18/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: aqua;
 }
-@media only screen and (max-width:600px){
+@media only screen and (min-width:600px){
 body{
 background-color: blue;
 }
