--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -16,16 +16,23 @@ header{
     border-width: 2px;
     border-color: black;
     border-style: ridge;
+    background-image: url(Vlaardingen.png);
 }
 /*media*/
-[class*="col-"]{
+body{
+     background-color: rgb(117, 165, 253);
+}
+    [class*="col-"]{
     width: 100%;
-    float: left;
+    float: left;  
 }
 @media only screen and (min-width:600px){
+body{
+    background-color: rgb(252, 252, 252);}
     [class*="col-"]
     {
 padding: 10px;
+
 }
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
