--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -8,7 +8,7 @@ text-shadow: -2px 2px 2px rgb(90, 114, 255);
 
 position: absolute;
 right: 500px;
-display: inline;
+display: inline-block;
 }
 /*header*/
 header{
