--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -12,7 +12,7 @@ body{background-color: beige;}
     [class*="col-"]
     {
 padding: 10px;
-table-layout: auto;
+
 }
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
@@ -35,7 +35,7 @@ font-size: 150px;
 color:rgb(0, 21, 139);
 text-shadow: -2px 2px 2px rgb(90, 114, 255);
 position: absolute;
-display: inline;
+display: inline-block;
 }
 /*ol*/
 ol li{
