--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -1,5 +1,5 @@
 
-/*media*/
+/*class*/
 
     [class*="col-"]{
     width: 100%;
@@ -39,6 +39,7 @@ text-shadow: -2px 2px 2px rgb(90, 114, 255);
 position: absolute;
 left: 25%;
 display: inline-block;
+background-image: element(img/vlaardingen);
 }
 /*ol*/
 ol li{
@@ -65,8 +66,8 @@ h2{
 }
 /*section*/
 #twee {
-   margin-top: 10px;
-    margin-right: 8px;
+   margin-top: 5px;
+    margin-right: 5px;
     background-color:rgb(59, 62, 255);
     border-style: ridge;
     border-width: 2px;
@@ -95,7 +96,7 @@ float: right;
     border-style: ridge;
     border-radius: 0.5px;
     border-color: blue;
-    margin: 3px;
+    
     float: right;
     display: block;
     }
@@ -119,7 +120,6 @@ float: right;
  #hpt{
     max-width: 99%;
     border-radius: 8px;
-    margin: 8px;
     border-width: 2px;
     border-color: black;
     border-style: ridge;
