--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -9,7 +9,7 @@
 body{background-color: azure;
 }
 
-@media only screen and (min-width:767px){
+@media only screen and (max-width:600px){
 body{background-color: beige;}
     [class*="col-"]
     {
