--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -2,14 +2,14 @@
 /*class*/
 
     [class*="col-"]{
-    width: 100%;
+    width: 1000%;
     min-height: auto;
     
 }
 body{background-color: azure;
 }
 
-@media only screen and (max-width:600px){
+@media only screen and (min-width:600px){
 body{background-color: beige;}
     [class*="col-"]
     {
