--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -119,7 +119,7 @@ float: right;
     border-style: ridge;
     }
     /*section*/
-.ftr{
+section{
     font-family: 'Bangers', cursive;
     font-family: 'Kalam', cursive;
     background-color: rgb(59, 62, 255);
@@ -138,7 +138,7 @@ float: right;
 #loc{
     float: right;
     padding-right: 60px;
-    clear: both;
+    
 }
 /*p*/
 #lit{
