--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -70,6 +70,7 @@ h2{
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
     float: right;
+    min-width: auto;
     }
 /*div*/
 .kolom{  
@@ -125,7 +126,7 @@ float: right;
      background-color: rgb(59, 62, 255);
     font-size: 13px;
     clear: both;
-    max-width: 99.5%;
+    min-width: 99.5%;
     height:60px;
     color: antiquewhite;
     border-style: ridge;
