--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -60,6 +60,7 @@ h2{
     float: left;
     margin-top: 5px;
     min-width: 100%;
+    display: inline;
     }
 /*div*/
 #twee {
@@ -71,7 +72,7 @@ h2{
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
     float: right;
-    min-width: none;
+    
     }
 /*div*/
 .kolom{  
