--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -52,7 +52,7 @@ h2{
 #een{
     color: antiquewhite;
     background-color: rgb(59, 62, 255);
-    min-height: 290px;
+    min-height: auto;
     border-style: ridge;
     border-width: 2px;
     border-color: rgb(120, 150, 160);
@@ -73,13 +73,15 @@ h2{
     border-radius: 6px;
     float: right;
     display: inline;
+    min-height: auto;
+    
     
     }
 /*div*/
 .kolom{  
 background-color: rgb(99, 136, 255);
-width: 288px;
-height: 268px;
+width: 318px;
+height: 240px;
 margin: 5px;
 margin-left: 10px;
 display: block;
@@ -130,7 +132,7 @@ float: right;
     font-size: 13px;
     clear: both;
     min-width: 100%;
-    height:60px;
+    height:auto;
     color: antiquewhite;
     border-style: ridge;
     border-width: 2px;
