--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -60,7 +60,7 @@ h2{
     float: left;
     margin-top: 5px;
     min-width: 100%;
-    display: inline;
+    
     }
 /*div*/
 #twee {
@@ -72,11 +72,14 @@ h2{
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
     float: right;
-    display: inline;
     min-height: auto;
-    
-    
-    }
+}
+/*section*/
+#vier{
+    min-width: 100%;
+    height: auto;
+}
+
 /*div*/
 .kolom{  
 background-color: rgb(99, 136, 255);
@@ -144,5 +147,4 @@ float: right;
 #lit{
     padding-left: 20px;
 }
-
 
