--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -58,7 +58,7 @@ h2{
     border-radius: 6px;
     float: left;
     margin-top: 5px; 
-    
+    width: auto;
     }
 /*div*/
 #twee {
@@ -70,10 +70,12 @@ h2{
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
     float: right;
+    width: auto;
     }
 /*div*/
 #vier{
     display: inline;
+    width: auto;
 }
 /*div*/
 .kolom{  
@@ -135,6 +137,7 @@ float: right;
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
     margin-top: 480px;
+    width: auto;
 }
 /*p*/
 #lit{
