--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -7,7 +7,7 @@
     }
 body{background-color: azure;
     }
-@media only screen and (min-width:600px){
+@media only screen and (max-width:600px){
 body{background-color: beige;}
     [class*="col-"]
     {
@@ -63,7 +63,7 @@ h2{
 /*div*/
 #twee {
     padding:0px;
-    margin-right: 0px;
+    margin-top: 5px;
     background-color:rgb(59, 62, 255);
     border-style: ridge;
     border-width: 2px;
@@ -138,7 +138,7 @@ float: right;
     border-width: 2px;
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
-    margin-top: 480px;
+    margin-top: 540px;
     width: auto;
 }
 /*p*/
