--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -2,7 +2,7 @@
 /*kolom en media*/
 
     [class*="col-"]{
-    max-width: 100%;
+    width: 100%;
     min-height: auto;
     }
 body{background-color: azure;
@@ -58,7 +58,8 @@ h2{
     border-radius: 6px;
     float: left;
     margin-top: 5px; 
-    
+    width: auto;
+    height: auto;
     }
 /*div*/
 #twee {
@@ -71,7 +72,8 @@ h2{
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
     float: right;
-    
+    width: auto;
+    height: auto;
     }
 /*div*/
 #vier{
@@ -120,6 +122,7 @@ float: right;
  /*img*/
  #hpt{
     width: auto;
+    height: auto;
     border-radius: 8px;
     border-width: 2px;
     border-color: black;
@@ -141,6 +144,8 @@ float: right;
     border-radius: 6px;
     margin-top: 540px;
     margin-right: 10px;
+    width: auto;
+    height: auto;
     
 }
 /*p*/
