--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -2,7 +2,7 @@
 /*kolom en media*/
 
     [class*="col-"]{
-    width: 100%;
+    width: auto;
     min-height: auto;
     }
 body{background-color: azure;
@@ -65,7 +65,7 @@ h2{
 #twee {
     padding:0px;
     margin-top: 5px;
-    margin-right: 0px;
+    margin-right: 5px;
     background-color:rgb(59, 62, 255);
     border-style: ridge;
     border-width: 2px;
