--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -65,6 +65,7 @@ h2{
     padding:0px;
     margin-top: 5px;
     margin-right: 5px;
+    margin-left: auto;
     background-color:rgb(59, 62, 255);
     border-style: ridge;
     border-width: 2px;
@@ -125,7 +126,8 @@ float: right;
     border-width: 2px;
     border-color: black;
     border-style: ridge;
-    min-width: 100%;
+    width: 100%;
+    height: auto;
     display: block;
     }
 /*section*/
