--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -65,7 +65,7 @@ h2{
     padding:0px;
     margin-top: 5px;
     margin-right: 5px;
-    margin-left: auto;
+    margin-left: 30px;
     background-color:rgb(59, 62, 255);
     border-style: ridge;
     border-width: 2px;
@@ -126,7 +126,7 @@ float: right;
     border-width: 2px;
     border-color: black;
     border-style: ridge;
-    width: 100%;
+    min-width: 100%;
     height: auto;
     display: block;
     }
