--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -13,7 +13,7 @@ body{background-color: beige;}
     [class*="col-"]
     {
     padding: 5px;
-    width: auto;
+    width: 100%;
     height: auto;
 }
 .col-1 {width: 8.33%;}
