--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -79,7 +79,7 @@ h2{
 /*div*/
 #vier{
     display: inline;
-    min-width: 100%;
+    max-width: 100%;
     height: auto;
 }
 /*div*/
@@ -146,7 +146,7 @@ float: right;
     border-radius: 6px;
     margin-top: 540px;
     margin-right: 10px;
-    width: 100%;
+    max-width: 100%;
     
 }
 /*p*/
