--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -61,7 +61,7 @@ h2{
     border-radius: 6px;
     float: left;
     margin-top: 5px; 
-    
+    width: 100%;
     }
 /*div*/
 #twee {
@@ -79,8 +79,7 @@ h2{
 /*div*/
 #vier{
     display: inline;
-    max-width: 100%;
-    height: auto;
+
 }
 /*div*/
 .kolom{  
@@ -146,7 +145,7 @@ float: right;
     border-radius: 6px;
     margin-top: 540px;
     margin-right: 10px;
-    max-width: 100%;
+
     
 }
 /*p*/
