--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -13,7 +13,7 @@ body{background-color: beige;}
     [class*="col-"]
     {
     padding: 5px;
-    width: 100%;
+   min-width: 100%;
     height: auto;
 }
 .col-1 {width: 8.33%;}
@@ -61,7 +61,7 @@ h2{
     border-radius: 6px;
     float: left;
     margin-top: 5px; 
-    width: 100%;
+    
     }
 /*div*/
 #twee {
