--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -127,7 +127,7 @@ float: right;
     border-width: 2px;
     border-color: black;
     border-style: ridge;
-    min-width: 100%;
+    max-width: 100%;
     height: auto;
     
     }
@@ -137,16 +137,17 @@ float: right;
     font-family: 'Kalam', cursive;
      background-color: rgb(59, 62, 255);
     font-size: 13px;
-    clear: left;
     color: antiquewhite;
     border-style: ridge;
     border-width: 2px;
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
     margin-top: 540px;
-    margin-right: 10px;
-
-    
+    margin-right: 10px;    
+}
+footer{
+    clear: left;
+    min-width: 100%;
 }
 /*p*/
 #lit{
