--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -127,7 +127,7 @@ float: right;
     border-width: 2px;
     border-color: black;
     border-style: ridge;
-    max-width: 100%;
+    min-width: 100%;
     height: auto;
     
     }
@@ -148,6 +148,7 @@ float: right;
 footer{
     clear: left;
     min-width: 100%;
+    height: auto;
 }
 /*p*/
 #lit{
