--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -67,7 +67,6 @@ h2{
 #twee {
     padding:0px;
     margin-top: 5px;
-    margin-left: 30px;
     background-color:rgb(59, 62, 255);
     border-style: ridge;
     border-width: 2px;
@@ -127,7 +126,7 @@ float: right;
     border-width: 2px;
     border-color: black;
     border-style: ridge;
-    width: 100%;
+    max-width: 200%;
     height: auto;
     
     }
@@ -144,11 +143,12 @@ float: right;
     border-radius: 6px;
     margin-top: 540px;
     margin-right: 10px;    
+    height: 20px;
 }
 footer{
     clear: left;
     min-width: 100%;
-    height: 20px;
+    
 }
 /*p*/
 #lit{
