--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -39,6 +39,7 @@ text-shadow: -2px 2px 2px rgb(90, 114, 255);
 position: absolute;
 top: -60px;
 left: 35%;
+min-width: 100%;
 }
 /*ol*/
 ol li{
@@ -126,7 +127,7 @@ float: right;
     border-width: 2px;
     border-color: black;
     border-style: ridge;
-    max-width: 200%;
+    
     height: auto;
     
     }
@@ -148,7 +149,7 @@ float: right;
 footer{
     clear: left;
     min-width: 100%;
-    
+    clear: right;
 }
 /*p*/
 #lit{
