--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -92,7 +92,7 @@ h2{
 /*div*/
 #vier{
     display: inline;
-
+width: 100%;
 }
 /*div*/
 .kolom{  
@@ -116,7 +116,7 @@ float: right;
     margin: 2px;
     float: right;
     display: block;
-    max-width: 100%;
+    min-width: 100%;
     }
  /*p */
  .xx{
@@ -136,7 +136,7 @@ float: right;
  } 
  footer{
     clear: left;
-    max-width: 100%;
+    min-width: 100%;
     clear: right;
 font-family: 'Bangers', cursive;
     font-family: 'Kalam', cursive;
