--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -13,7 +13,7 @@ body{background-color: beige;}
     [class*="col-"]
     {
     padding: 5px;
-   width: 100%;
+   min-width: 100%;
     height: auto;
     
 }
