--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -8,15 +8,15 @@
     }
 body{background-color: azure;
     }
-@media only screen and (max-width:600px){
+@media only screen and (min-width:600px){
 body{background-color: beige;}
     [class*="col-"]
     {
     padding: 5px;
-   min-width: 200%;
+   min-width: 100%;
     height: auto;
-    
-}
+    }
+
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
