--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -9,7 +9,7 @@ body{background-color: azure;
     }
 @media only screen and (max-width:600px){
 body{background-color: beige;}
-
+h1{text-align: center;}
 
     [class*="col-"]
     {
