--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -9,7 +9,7 @@ body{background-color: azure;
     }
 @media only screen and (max-width:600px){
 body{background-color: beige;}
-
+.hpt{width: 50%; height: auto;}
 
     [class*="col-"]
     {
@@ -146,7 +146,7 @@ float: right;
     border-width: 2px;
     border-color: rgb(120, 150, 160);
     border-radius: 6px;
-    margin-top: 540px;
+    margin-top: 610px;
     margin-right: 15px;    
     height: 40px;
     }
