--- a/Vlaardingen/css/style.css
+++ b/Vlaardingen/css/style.css
@@ -149,7 +149,7 @@ float: right;
     margin-top: 600px;
     margin-right: 15px;    
     height: 40px;
-    
+    max-width: 100%;
     }
 /*p*/
 #lit{
