--- a/Hobby/css/style.css
+++ b/Hobby/css/style.css
@@ -1,31 +1,35 @@
 .col{
-    margin-top: 2rem;
-    padding-top: 2rem;
-    margin-bottom: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    height: auto;
+    margin-top: 1rem;
+    padding-top: 1rem;
+    margin-bottom: 0.25rem;
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
+    
     border-radius: 0.25rem;
     padding-bottom: 0.5rem;
     
     }
     .sft{
-        margin-left: 8rem;
+        margin-left: 10rem;
     }
+    
     img{
     border-radius:0.25rem;
     width: 100%;
     height: 100%;
-    border-color:rgb(228, 244, 255);  
-    border-style: groove;
     
     }
-    
     header{
         margin: 0.25rem;
-        height: 8rem;
+        height: 6.3rem;
         background-color: rgb(144, 211, 255);
         border-radius: 0.25rem;
+    }
+    iframe{
+        height: 100%;
+        border-radius: 0.25rem;  
+        width: 305px; 
+        
     }
     footer{
         margin:0.25rem;
@@ -35,13 +39,13 @@
         border-radius: 0.25rem;
     }
     .kop{
-        font-size: 6rem;
+        
         font-style: oblique;
         text-align: center;
         text-shadow: -2px 2px 1px rgb(255, 255, 255);
     }
     #tex{
-        font-size: 2rem;
+        font-size: 1.5rem;
         text-align: center;
         font-style: oblique;
     }
@@ -49,6 +53,38 @@
         text-align: center;
         font-style: oblique;
     }
-    .fs-1{
-        
+    .mrg{
+        margin-bottom: 0.1rem;
+        padding-left: 1rem;
+    }
+    .tt{
+        padding-left:25px ;
+        padding-right: 25px;
+        text-align: center;
+        font-style: oblique; 
+    }
+    iframe{
+        display: inline;
+    }
+    /* pagina over mij */
+    .ttx{
+        padding-left:25px ;
+        padding-right: 25px;
+        text-align: center;
+        font-style: oblique;
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+    /* pagina contact*/
+    .frm{
+         
+        margin-left: 20px;
+        margin-right: 50%;
+    }
+    .txa{
+        margin-left: 20px;
+        margin-right: 50%;
+    }
+    .txb{
+        margin-left:20px ;
     }
