--- a/Introductie/css/style.css
+++ b/Introductie/css/style.css
@@ -293,8 +293,8 @@ caption{
 /*h1*/
 #benb{
     margin-left: 164px;
-    margin-right: 165px;
-    
+    margin-right: 164px;
+    display: block;
     
 }
 /*figcation*/
