--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -211,16 +211,46 @@
 
 a{
   color: brown;
- }
- /* For mobile phones: */
-[class*="col-"] {
-  width: 100%;
 }
+/* markering werkzaamheden*/
+#uitzondelijk{
+  color:black;
+  font-family: "Great Vibes", cursive;
+  font-size: 3rem;
+  text-shadow: 0px 0px 3px red;
+  transform: matrix(1, 0.29, 0, 1, 0, 0);
+
+}
+
+/* jaarverslagen*/
+.finjrvsl{
+  background-color: white;
+}
+
+ /* tabellen*/
+table{
+   
+  width: 50%;
+}
+td, th{
+    border: 1px solid black;
+    text-align: right;
+    padding: 8px;
+}
+/* iframe Hoogstraat*/
 #hoogstraat{
    margin: 10px;
    margin-left: 640px;
 
 }
+
+
+ /* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+
 
 @media only screen and (min-width: 600px) {
   /* For tablets: */
