--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -257,9 +257,11 @@ td, th{
 
 [class*="col-"] {
   width: 100%;
-  float: left;
-} @media only screen and (min-width: 600px){
-
+} 
+ @media only screen and (min-width: 600px){
+  [class*="col-"] {
+float: left;
+}
 .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
   .col-3 {width: 25%;}
