--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -260,7 +260,7 @@ td, th{
 } 
  @media only screen and (max-width: 600px){
   [class*="col-"] {
-float: none;
+float: left;
 }
 .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
@@ -281,7 +281,7 @@ float: none;
 } 
  @media only screen and (min-width: 600px){
   [class*="col-"] {
-float: none;
+float: left;
 }
 .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
