--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -38,7 +38,9 @@
     font-family: "Great Vibes", cursive;
     font-size: 2rem;
     text-shadow: 0.5px 0.5px 1px rgb(160, 0, 0);
-}
+    
+  }
+
 
 .aac{
   float: left;
@@ -140,7 +142,9 @@
     margin-left: 230px;
 }
 .position{
+  
   float: right;
+  clear: right;
 }
 
 #ruimte{
@@ -254,7 +258,7 @@ td, th{
 
 
  /* For mobile phones: */
-/*
+
 [class*="col-"] {
   width: 100%;
 } 
@@ -275,7 +279,7 @@ float: left;
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
 }
-
+/*
 [class*="col-"] {
   width: 100%;
 } 
