--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -25,8 +25,11 @@
     color: rgb(0, 0, 0);
     font-family: "Great Vibes", cursive;
     font-size: 2rem;
+   
     text-shadow: 0.5px 0.5px 1px rgb(255, 0, 0);
+  clear: both;
   }
+
   .kleur{
     color: brown;
   }
