--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -267,7 +267,7 @@ td, th{
 } 
  @media only screen and (max-width: 600px){
   [class*="col-"] {
-float: left;
+width: 100%;
 }
 .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
@@ -288,7 +288,7 @@ float: left;
 } 
  @media only screen and (min-width: 600px){
   [class*="col-"] {
-float: left;
+width: auto;
 }
 .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
