--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -1,41 +1,27 @@
 
 .bgr{
     background-color: rgb(207, 168, 60);
-   text-align: center;
-    height: auto;
     border-radius: 3px;
     position: fixed;
     border-style: ridge;
     border-color: brown;
     
 }
-.great-vibes-regular {
+.koptext {
+    text-align: center;
     font-family: "Great Vibes", cursive;
     font-size: 7rem;
     display: inline;
     text-shadow: 2px 2px 4px brown;
     margin-top: 10px;
-    position: relative;
     padding-right: 32rem;
     padding-left: 32rem;
   }
-  .aaa{
-    float: left;
-    margin-left: 15px;
-    margin-right: 15px;
-    color: rgb(0, 0, 0);
-    font-family: "Great Vibes", cursive;
-    font-size: 2rem;
-   
-    text-shadow: 0.5px 0.5px 1px rgb(255, 0, 0);
-  clear: both;
-  }
-
+  
   .kleur{
     color: brown;
   }
   .aab{
-    float: left;
     margin-left: 15px;
     margin-right: 15px;
     color: rgb(0, 0, 0);
@@ -46,18 +32,8 @@
   }
 
 
-.aac{
-  float: left;
-    margin-left: 15px;
-    margin-right: 15px;
-    color: rgb(0, 0, 0);
-    font-family: "Great Vibes", cursive;
-    font-size: 2rem;
-    text-shadow: 0.5px 0.5px 1px rgb(35, 35, 255);
-}
-  
-  #tussenruimte{
-    height: 215px;
+  .tussenruimte{
+    height: 11rem;
   }
   body{
     background-color: antiquewhite;
@@ -81,17 +57,6 @@
     font-size: 20px;
 }
 
-#pos{
-    padding-left: 200px;
-    color: green;
-}
-#idd{
-    width: 55%;
-
-}
-#afs{
-    margin-top: 20px;
-}
 .ttx{
   text-align: center;
   color:green;
@@ -103,7 +68,6 @@
     text-align: center;
     color:green;
     font-size: 22px;
-    /*text-shadow: 0px 0px 6px yellowgreen;*/
   }
   .midpos{
     margin-left: 650px;
@@ -120,9 +84,7 @@
 .rtr{
     margin-right: 420px;
 }
-.space{
-  height: 205px;
-}
+
 .tpg{
     text-align: center;
     color: brown;
@@ -132,10 +94,7 @@
   margin-left: 100px;
    
 }
-.ruim{
-  height: 190px;
-  
-}
+
 .maat{
    
     margin-left: 680px;
@@ -151,9 +110,6 @@
   clear: right;
 }
 
-#ruimte{
-  height: 215px;
-}
 .verdeling{
   margin-left: 150px;
   margin-bottom: 30px;
@@ -246,7 +202,7 @@ a{
  /* tabellen*/
 table{
   
-  width: 50%;
+  width: 50rem;
 }
 td, th{
     border: 1px solid black;
