--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -2,7 +2,7 @@
 .bgr{
     background-color: rgb(207, 168, 60);
     border-radius: 3px;
-    position: fixed;
+    /*position: fixed;*/
     border-style: ridge;
     border-color: brown;
     
@@ -30,8 +30,6 @@
     text-shadow: 0.5px 0.5px 1px rgb(160, 0, 0);
     
   }
-
-
   .tussenruimte{
     height: 11rem;
   }
@@ -40,7 +38,7 @@
   }
   .balk{
     border-radius: 3px;
-    height: 60px;
+    height: 3.75rem;
     background-color: rgb(207, 168, 60);
     text-align: center;
     font-family: "Great Vibes", cursive;
