--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -2,7 +2,7 @@
 .bgr{
     background-color: rgb(207, 168, 60);
     border-radius: 3px;
-    /*position: fixed;*/
+    position: fixed;
     border-style: ridge;
     border-color: brown;
     
@@ -11,7 +11,8 @@
     text-align: center;
     font-family: "Great Vibes", cursive;
     font-size: 7rem;
-    display: inline;
+    margin-bottom: -1.2rem;
+    /*display: inline;*/
     text-shadow: 2px 2px 4px brown;
     margin-top: 10px;
     padding-right: 32rem;
