--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -2,7 +2,7 @@
 .bgr{
     background-color: rgb(207, 168, 60);
     border-radius: 3px;
-    position: fixed;
+   /* position: fixed;*/
     border-style: ridge;
     border-color: brown;
     
@@ -10,7 +10,7 @@
 .koptext {
     text-align: center;
     font-family: "Great Vibes", cursive;
-    font-size: 7rem;
+    font-size: 5rem;
     margin-bottom: -1.2rem;
     /*display: inline;*/
     text-shadow: 2px 2px 4px brown;
@@ -31,20 +31,20 @@
     text-shadow: 0.5px 0.5px 1px rgb(160, 0, 0);
     
   }
-  .tussenruimte{
-    height: 11rem;
-  }
+  /*.tussenruimte{
+    height: 12rem;
+  }*/
   body{
     background-color: antiquewhite;
   }
   .balk{
     border-radius: 3px;
-    height: 3.75rem;
+    height: 3rem;
     background-color: rgb(207, 168, 60);
     text-align: center;
     font-family: "Great Vibes", cursive;
     text-shadow: 0.5px 0.5px 1px black;
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-shadow: 3px 3px 5px brown;
     border-style: ridge;
     border-color: brown;
@@ -219,6 +219,7 @@ td, th{
  /* For mobile phones: */
  [class*="col-"] {
   width: 100%;
+  float:left
 }
  @media only screen and (max-width: 600px){
 .col-xs-1 {width: 8.33%;}
