--- a/Louis/css/style.css
+++ b/Louis/css/style.css
@@ -1,60 +1,37 @@
-body{
-  background-color: rgb(214, 0, 0);
-}
-header{
-  background-color: rgb(255, 208, 0);
-  width: 100%;
-  height: 200px;
-  border-radius: 5px;
 
-}
 iframe{
   display: block;
   
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  min-height: 565px;
-  filter: drop-shadow( 0px 0px 130px rgb(255, 208, 0));
+  filter: drop-shadow( 0px 0px 130px rgb(60, 255, 0));
   
 }
-footer{
-  background-color: rgb(255, 208, 0);
-  height: 50px;
-  width: 100%;
- border-radius: 5px;
-}
-#ftx{
-  float: right;
-}
-#EEN{
-  height: 70px;
+
+img{
+  
+  width: auto;
+  height: 10rem;
+ margin-left: 10rem;
+
+  
  
 }
-img{
-  display: inline;
-  width: auto;
-  height: 175px;
-  margin: 10px;
-  border-radius: 5px;
-  border-style: groove;
-  filter: drop-shadow(2px 2px 6px rgb(255, 0, 0));
-}
 h1{
-display: inline;
-font-size: 160px;
-text-shadow: -6px -6px 6px rgb(214, 78, 0);
-margin-bottom: 10px;
-position: relative;
-left: 130px;
-bottom:50px
+  display: inline;
+padding-left: 6rem;
+
+font-size: 5rem;
+color: greenyellow;
+text-shadow: 2px 2px 4px black;
 }
-#twee{
-   height: 120px;
-}
+
+
 #txt{
   font-size: 30px;
-  text-align: center;
-  color: rgb(252, 206, 2);
+  text-align: center;  
+  color: greenyellow;
+  text-shadow: 3px 3px 6px black;
+  background-color: darkgrey;
 }
