--- a/Louis/css/style.css
+++ b/Louis/css/style.css
@@ -13,14 +13,17 @@ img{
   
   width: auto;
   height: 10rem;
- margin-left: 10rem;
+ 
 
   
  
 }
+header{
+  text-align: center;
+}
 h1{
   display: inline;
-padding-left: 6rem;
+
 
 font-size: 5rem;
 color: greenyellow;
