--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -8,24 +8,23 @@ border-radius: 3px;
 /*border-style: ridge;*/
 border-color: brown;
 }
+
 .koptext {
     text-align: center;
     font-family: "Great Vibes", cursive;
     font-size: 5.5rem;
-    margin-bottom: -1.2rem;
-    text-shadow: 1px 1px 4px greenyellow;
-    margin-top: 10px;
-    padding-right: 32rem;
-    padding-left: 32rem;
-    clear: inherit;
+    
+    text-shadow: 1px 1px 4px rgb(240, 255, 33);
+   
+    
   }
   
   .kleur{
     color: brown;
   }
   .aab{
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 1rem;
+    margin-right: 1rem;
     color: rgb(0, 0, 0);
     font-family: "Great Vibes", cursive;
     font-size: 2rem;
@@ -69,17 +68,17 @@ border-color: brown;
 .ttt{
     text-align: center;
     color:green;
-    font-size: 25px;
+    font-size: 1.56rem;
   }
   .midpos{
-    margin-left: 650px;
+    margin-left: 40.625rem;
   }
 .ttr{
     text-align: center;
     color: brown;
-    font-size: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
+    font-size: 1.25rem;
+    padding-left: 3.25rem;
+    padding-right: 3.25rem;
     
 }
 
@@ -209,121 +208,17 @@ table{
 td, th{
     border: 1px solid black;
     text-align: right;
-    padding: 8px;
+    padding: 0.5rem;
 }
 /* iframe Hoogstraat*/
 #hoogstraat{
-   margin: 10px;
-   margin-left: 640px;
+   margin: 0.625rem;
+   margin-left: 40rem;
 
 }
 
 
- /* For mobile phones: */
- [class*="col-"] {
-  width: 100%;
-  float:left
-}
- @media only screen and (max-width: 600px){
-.col-xs-1 {width: 8.33%;}
-  .col-xs-2 {width: 16.66%;}
-  .col-xs-3 {width: 25%;}
-  .col-xs-4 {width: 33.33%;}
-  .col-xs-5 {width: 41.66%;}
-  .col-xs-6 {width: 50%;}
-  .col-xs-7 {width: 58.33%;}
-  .col-xs-8 {width: 66.66%;}
-  .col-xs-9 {width: 75%;}
-  .col-xs-10 {width: 83.33%;}
-  .col-xs-11 {width: 91.66%;}
-  .col-xs-12 {width: 100%;}
-}
-
-
- @media only screen and (min-width: 600px){
-  [class*="col-"] {
-width: 100%;
-}
-.col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
-}
-
-/*
-[class*="col-"] {
-  width: 100%;
-} 
- @media only screen and (min-width: 768px){
-  [class*="col-"] {
-    float: none;
-}
-.col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-}
-[class*="col-"] {
-  width: 100%;
-} 
- @media only screen and (min-width: 992px){
-  [class*="col-"] {
-float: none;
-}
-.col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-}
-
-[class*="col-"] {
-  width: 100%;
-} 
- @media only screen and (min-width: 1200px){
-  [class*="col-"] {
-float: none;
-}
-.col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-}
-
-*/
-
-
+ 
 
 
 
