--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -80,7 +80,7 @@ border-color: brown;
     font-size: 1.25rem;
     padding-left: 3.25rem;
     padding-right: 3.25rem;
-    
+    width: auto;
 }
 
 .rtr{
