--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -71,8 +71,10 @@ border-color: brown;
     font-size: 1.56rem;
   }
   .midpos{
-    padding-left: 40.625rem;
+    
     display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 .ttr{
     text-align: center;
@@ -98,9 +100,9 @@ border-color: brown;
 }
 
 .maat{
-   
-    margin-left: 680px;
-
+   display:block;
+    margin-right: auto;
+    margin-left: auto;
 }
 .mat{
     width: 55%;
