--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -127,13 +127,10 @@ border-color: brown;
   margin-left: 150px;
 }
 .afmeting{
- 
-  margin-top: 20px;
-  margin-left: 20px;
-  padding-right: 20px;
-  padding-left: 20px; 
-  padding-bottom: 20px; 
-  padding-top: 20px;
+  display: block;
+  margin-top: 1rem;
+  margin-left: auto;
+  padding: 1rem;
 }
 .afscheiding{
   border-radius: 3px;
@@ -215,9 +212,11 @@ td, th{
 }
 /* iframe Hoogstraat*/
 #hoogstraat{
-   margin: 0.625rem;
-   margin-left: 40rem;
-
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+   margin-right:auto;
+   margin-left: auto;
+ display: block;
 }
 
 
