--- a/MuziekschoolH&J/css/style.css
+++ b/MuziekschoolH&J/css/style.css
@@ -1,28 +1,4 @@
-/*
-[class*="col-"] {
-    width: 100%;}
-    @media only screen and (max-width: 600px) {
-    [class*="col-"]{
-        height: auto;
-    }
-    @media only screen and (min-width: 600px) {
-        
-    }
-        .col-1 {width: 8.33%;}
-        .col-2 {width: 16.66%;}
-        .col-3 {width: 25%;}
-        .col-4 {width: 33.33%;}
-        .col-5 {width: 41.66%;}
-        .col-6 {width: 50%;}
-        .col-7 {width: 58.33%;}
-        .col-8 {width: 66.66%;}
-        .col-9 {width: 75%;}
-        .col-10 {width: 83.33%;}
-        .col-11 {width: 91.66%;}
-        .col-12 {width: 100%;}
-    }
 
-*/
 [class*="col-"] {
   width: 100%;
 }
@@ -67,7 +43,7 @@ li {
     display: block;
     color: white;
     text-align: center;
-    padding: 16px 16px;
+    padding: 10px 37px;
     text-decoration: none;
   }
   li a:hover {
@@ -76,33 +52,35 @@ li {
 
 .kleur{
     background-color: rgb(216, 216, 0);
-    height: 4px;
+    height: 2px;
+    
 }
 .klr{
     background-color: rgb(255, 181, 96);
-    vertical-align: top;
-    width: 17%;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    
-  }
+    padding-left: 15px;
+    padding-bottom: 355px;
+    }
 .positie{
   margin-top: 30px;
 }
   .pos{
     padding-left: 1rem;
   }
-  table{
-    margin-top: -2px;
-    margin-left: -2px;
-    margin-bottom: -2px;
-  }
+ .klt{
+  background-color: rgb(255, 181, 96);
+    padding-left: 15px;
+    padding-bottom: 310px;
+ }
+  
   .klrt{
     color:rgb(168, 72, 35);
+    
   }
   .plaats{
-    padding-left: 2rem;
-    padding-right: 2rem;
+
+    display: inline;
+    padding: 15px; 
+
   }
   footer{
     text-align: center;
@@ -110,6 +88,7 @@ li {
     background-color: rgb(168, 72, 35);
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+    
   }
   .ruimte{
     padding: 0.5rem;
@@ -128,8 +107,7 @@ li {
   }
   .plt{
     float: left;
-    clear: left;
-    padding-bottom: 2rem;
+    margin-bottom: 15px;
   }
   .tek{
     margin-top: 2rem;
@@ -153,4 +131,15 @@ li {
    border-style: none;
    color: white;
  }
+ 
+* {
+  box-sizing: border-box;
+}
+[class*="col-"] {
+  float: left;
+  
+}
+.aside {
+  padding: 15px;
+  }
  
