--- a/MuziekschoolH&J/css/style.css
+++ b/MuziekschoolH&J/css/style.css
@@ -58,18 +58,27 @@ li {
 .klr{
     background-color: rgb(255, 181, 96);
     padding-left: 15px;
-    padding-bottom: 355px;
+    padding-bottom: 468px;
+    padding-right: 15px;
     }
+.kll{ background-color: rgb(255, 181, 96);
+  padding-left: 15px;
+  padding-bottom: 53px;
+  padding-right: 15px;
+}
+  
 .positie{
   margin-top: 30px;
 }
   .pos{
-    padding-left: 1rem;
+    
+    padding: 15px;
   }
  .klt{
   background-color: rgb(255, 181, 96);
     padding-left: 15px;
     padding-bottom: 310px;
+    padding-right: 15px;
  }
   
   .klrt{
@@ -77,7 +86,6 @@ li {
     
   }
   .plaats{
-
     display: inline;
     padding: 15px; 
 
@@ -88,17 +96,18 @@ li {
     background-color: rgb(168, 72, 35);
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    
-  }
-  .ruimte{
+    }
+  
+
+.ruimte{
     padding: 0.5rem;
   }
   .plats{
     
     float: right;
-    clear: right;
-    margin-right: 18rem;
-    padding-left: 5rem;
+    
+    /*margin-right: 18rem;
+    padding-left: 5rem;*/
   }
   .tekst{
     padding-left: 2rem;
