--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -1,5 +1,7 @@
 [class*="col-"]
    {
+    width: 100%;
+    float: left;
     display: block;
     }
     @media only screen and (min-height: 768px){
