--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -44,7 +44,7 @@
         padding-left: 23px;
     }
     .container{
-        display: flex;
+        display: inline-block;
     }
     .blok2{
         padding-left: 15px;
