--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -103,10 +103,12 @@
     box-sizing: border-box;
   }
   [class*="col-"]
-  {
+  body{
       width: 100%;
       float: left;
-      
+      a{
+        display: block;
+    }
   }
 
 
