--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -105,24 +105,12 @@
   [class*="col-"]
   body{
       width: 100%;
-      float: left;
+      float: left;}
       a{
         display: block;
     }
-  }
+  
 
-
-  @media (max-width: 600px){
-    body{
-        width: 100%;
-        float: left;
-        }
-    a{
-        display: block;
-    }
-  }
- 
-   
     @media  (min-width: 768px){
     
     .col-1 {width: 8.33%;}
