--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -109,7 +109,9 @@
        width: 100%;
        display: block;
       }
-  
+  .container{
+    display: block;
+  }
 
     @media  (min-width: 768px){
     
