--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -101,10 +101,14 @@
   }
   
   
-     @media all and (max-width: 768px){
+     @media all and (max-width: 600px){
         body{
             width: 100%;
-            display: block;
+            font-size: 1rem;
+
+        }
+        img{
+            width: auto;
         }
      }
       
