--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -105,7 +105,7 @@
         body{
             width: 100%;
             font-size: 1rem;
-            float: left;
+            display: block;
         }
         img{
             width: auto;
