--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -106,6 +106,7 @@
             width: 100%;
             font-size: 1rem;
             display: block;
+            float: left;
         }
         img{
             width: auto;
