--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -105,14 +105,17 @@
         body{
             width: 100%;
             font-size: 1rem;
-            display: block;
+            
             float: left;
         }
         img{
             width: auto;
         }
         .col-12{
-            width: auto;
+            width: 100%;
+        }
+         a{
+            display: block;
         }
      }
       
