--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -119,6 +119,7 @@
         }
         nav{
             text-align: center;
+            width: 100%;
         }
          a{
             display: block;
@@ -126,9 +127,11 @@
         }
         .col-3{
             display: block;
+            width: 100%;
         }
          .col-7{
             display: block;
+            width: 100%;
          }
          h1{
             font-size: 1.5rem;
