--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -105,14 +105,16 @@
         body{
             width: 100%;
             font-size: 1rem;
-            
+            display: block;
             float: left;
         }
         header{
             width: 100%;
+            display: block;
         }
         img{
             width: auto;
+            vertical-align: middle;
         }
         .col-12{
             width: 100%;
@@ -123,14 +125,14 @@
         }
          a{
             display: block;
-            
+            width: 100%;
         }
         .col-3{
             
             width: 100%;
         }
          .col-7{
-            display: block;
+            
             width: 100%;
          }
          h1{
