--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -106,29 +106,26 @@
             width: 100%;
             font-size: 1rem;
             display: block;
-            float: left;
+            
         }
         header{
             width: auto;
             display: block;
             padding: none;
         }
-        img{
+         nav{
+            text-align: center;
             width: fit-content;
             
-        }
-        
-        nav{
-            text-align: center;
-            width: 100%;
-            float: none;
         }
          a{
             display: block;
             width: 100%;
 
         }
-    
+        img{
+            width: fit-content;
+    }
          h1{
             font-size: 1.5rem;
          }
