--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -115,11 +115,11 @@
         }
          nav{
             text-align: center;
-            width: fit-content;
-            
+            width: 100%;
+            display: block;
         }
          a{
-            display: block;
+            
             width: 100%;
 
         }
