--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -115,7 +115,7 @@
         }
          nav{
             text-align: center;
-            
+            width: 100%;
            
         }
         .col-12{
