--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -111,7 +111,7 @@
         header{
             
             display: block;
-            width: 100%;
+            width: max-content;
         }
          nav{
             text-align: center;
